<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home" android:title="@string/home" android:icon="@drawable/ic_home"/>
        <item android:id="@+id/writter" android:title="@string/book_writer" android:icon="@drawable/ic_bookwriter"/>
        <item android:id="@+id/about_us" android:title="@string/about_apps" android:icon="@drawable/ic_about_app"/>
        <item android:id="@+id/privacy" android:title="@string/privacy_policy" android:icon="@drawable/ic_privacy"/>
        <item android:id="@+id/update_app" android:title="@string/update_app" android:icon="@drawable/update_icon"/>
    </group>

    <item android:title="@string/other_application">
        <menu>
            <item android:id="@+id/abar_vinno_kisu_hok" android:title="@string/aber_vinno_kisu_hoq_app" android:icon="@drawable/abar_vinno_kichu_hoq_app_icon"/>
            <item android:id="@+id/ahobban_app" android:title="@string/ahobban_book" android:icon="@drawable/ahobban_book_icon"/>
            <item android:id="@+id/moreApp" android:title="@string/more_apps" android:icon="@drawable/ic_read_more"/>
        </menu>
    </item>

    <item android:title="@string/communication">
        <menu>
            <item android:id="@+id/ratting" android:title="@string/rate_app" android:icon="@drawable/rate_app_icon"/>
            <item android:id="@+id/contact_us" android:title="@string/contact_us" android:icon="@drawable/ic_contact_us"/>
            <item android:id="@+id/website" android:title="@string/website" android:icon="@drawable/ic_link_website"/>
            <item android:id="@+id/shair" android:title="@string/share" android:icon="@drawable/ic_shair"/>
        </menu>
    </item>
    <item android:title="@string/social_account">
        <menu>
            <item android:id="@+id/facebook_page" android:title="@string/facebook_page" android:icon="@drawable/facebook_icon"/>
            <item android:id="@+id/facebook_group" android:title="@string/facebook_group" android:icon="@drawable/facebook_icon"/>
            <item android:id="@+id/youtube" android:title="@string/youtube_toufik" android:icon="@drawable/youtube_icon"/>
            <item android:id="@+id/youtube2" android:title="@string/youtube_tauhid" android:icon="@drawable/youtube_icon"/>
            <item android:id="@+id/linkedin" android:title="@string/linkedin" android:icon="@drawable/linkedin_icon"/>
        </menu>
    </item>
</menu>