<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_close_icon"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangla_font"
            android:text="অভিনন্দন!"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:fitsSystemWindows="true"
            android:src="@drawable/group_people" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangla"
            android:text="@string/join_our_group"
            android:textColor="#1471BC"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bangla_font"
            android:text="@string/group_join_about"
            android:textColor="#131415"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/join_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/bangla"
            android:text="@string/JoinNow"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/already_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bangla_font"
            android:text="@string/already_join_group"
            android:textAlignment="textEnd"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>